#13 Completed Swagger Intergrateion
